@startuml 09_stochastic_top_composition

title StochasticTOP - Composition of Orthogonal Strategies

note as N0
  UPDATED to match src/optimization/trajectory_optimization_problem.py:
  no TrajectoryState/ErrorDynamics/ErrorState pytypes (see
  01_data_structures.puml - it's all a flat sol_data dict now),
  SensitivityPropagator renamed StateSensitivityPropagator,
  FeedbackControlMethod renamed ErrorPropagator (see
  08_feedback_control_method.puml), and there is no separate
  "augment_error_dynamics()" step - measurement Jacobians are
  computed inline inside EstimatedStateCovPropagator.propagate_cov().
end note

abstract class TrajectoryOptimizationProblem {
  -_problem_def : ProblemDefinition
  -_propagator : Propagator
  -_constraints_list : list[Constraint]
  +variables() : list[OptimizationVariable]
  +propagate(sol_data) : dict
  +objective(sol_data) : float
  +constraints() : list[Constraint]
  +evaluate(inputs) : dict
  +to_pyoptsparse(init_guess) : (Optimization, sens)
}

class StochasticTOP {
  -_gain_param : GainParameterization
  -_error_propagator : ErrorPropagator
  +variables() : list[OptimizationVariable]
  +objective(sol_data) : float
  +evaluate(inputs) : dict
}

TrajectoryOptimizationProblem <|-- StochasticTOP

class StateSensitivityPropagator {
  +propagate(problem_def, sol_data) : dict
}

abstract class GainParameterization {
  +variables() : list[OptimizationVariable]
  +compute_gains(problem_def, sol_data) : dict
}
class LQRArcGains
class LQRFullTrajGains
GainParameterization <|-- LQRArcGains
GainParameterization <|-- LQRFullTrajGains

abstract class ErrorPropagator {
  +__init__(problem_def)
  +init_error_state(problem_def) : array
  +propagate_cov(problem_def, sol_data) : dict
  +terminal_constraint_value(problem_def, sol_data) : array
  +stochastic_control_term(problem_def, sol_data) : array
}
class TrueStateCovPropagator
class TrueStateSqrtCovPropagator
class EstimatedStateCovPropagator {
  -_meas : MeasurementModel
}
ErrorPropagator <|-- TrueStateCovPropagator
ErrorPropagator <|-- TrueStateSqrtCovPropagator
ErrorPropagator <|-- EstimatedStateCovPropagator

StochasticTOP "1" o-- "1" StateSensitivityPropagator : _propagator
StochasticTOP "1" o-- "1" GainParameterization : _gain_param
StochasticTOP "1" o-- "1" ErrorPropagator : _error_propagator

abstract class Constraint {
  +name : str
  +size : int
  +lower
  +upper
  +linearities : dict
  +evaluate(problem_def, sol_data) : array
}
StochasticTOP "1" o-- "many" Constraint : _constraints_list

class OptimizationVariable {
  +name : str
  +size : int
  +lower
  +upper
  +value
  +guess_fn
}

note bottom of StochasticTOP
  __init__(problem_def) does ALL type dispatch, once, via two
  plain {name: cls} dict lookups keyed on
  problem_def.toggles.gain_param_type / feedback_control_type -
  no if/elif chain, uniform __init__(problem_def) on every
  ErrorPropagator subclass. evaluate() itself is then completely
  branch-free:

  evaluate(inputs):
  1. sol_data = self.propagate(dict(inputs))
     (= _propagator.propagate(problem_def, sol_data), inherited
      from TrajectoryOptimizationProblem)
     + X_hst, t_hst, t_node_bound, A_hst, B_hst, A_arc_hst,
       B_arc_hst, A_postinsert
  2. sol_data = _gain_param.compute_gains(problem_def, sol_data)
     + K_arc_hst
  3. sol_data = _error_propagator.propagate_cov(problem_def, sol_data)
     + (subclass-specific keys - see 08_feedback_control_method.puml)
  4. output = {'o': self.objective(sol_data)}
  5. for c in self.constraints(): output[c.name] = c.evaluate(problem_def, sol_data)

  gain_param and _error_propagator are chosen independently at
  construction time - any combination is valid. _propagator is
  fixed by problem type (see 03_propagator.puml).
end note

note right of GainParameterization
  Populates sol_data['K_arc_hst'] from sol_data (already
  carrying A_arc_hst/B_arc_hst from StateSensitivityPropagator)
  and problem_def. Used identically by every ErrorPropagator
  subclass, whichever one is active.
end note

note right of ErrorPropagator
  Consumes sol_data (including K_arc_hst, however it was
  produced) to propagate covariance/error and add its own keys
  back into sol_data. Does NOT compute objective/constraint
  values itself - CovarianceConstraint/ControlNormConstraint
  (src/optimization/constraints.py) forward to
  terminal_constraint_value()/stochastic_control_term() instead
  - see 08_feedback_control_method.puml.
end note

@enduml
